package domain.service;

public class TourService {

    public void assignRequestsToCouriers() {
        // Implementation will follow
    }
}
